Fixed PDF spacing between threats terms

--- a/docroot/themes/iucn_who/less/print-style.less
+++ b/docroot/themes/iucn_who/less/print-style.less
@@ -37,6 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 .field--name-field-as-threats-in,
 .field--name-field-as-threats-extent{
   display: inline-block;
+  float:left;
 }
 .field--name-field-as-threats-extent{
   text-transform: lowercase;
